docs: examples correction, filtering examples tested - no assertions yet